--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,44 +4,12 @@
 </div>
 
 
-<!-- changing the HTML FILE -->
-<!-- <div>
-  <h1>My Goals</h1>
-  <p>My goal for today is {{ goal }}</p>
-</div> -->
-
-<!-- displaying goals -->
-<!-- <div>
-  <h1>My Goals</h1>
-  <ul>
-      <li *ngFor='let goal of goals'>
-        {{goal}}
-      </li>
-  </ul>
-</div> -->
-
-<!-- displaying classes using for -->
-<!-- <div>
-  <h1>My Goals</h1>
-  <hr>
-  <ul>
-      <li *ngFor='let goal of goals'>
-        {{goal.name}}
-      </li>
-  </ul>
-</div> -->
-
-<!-- displaying classes condition -->
-<!-- <div>
-  <h1>My Goals</h1>
-  <hr>
-  <ul>
-      <li *ngFor='let goal of goals'>
-        {{goal.name}}
-      </li>
-  </ul>
-  <p *ngIf='goals.length > 5'>Your goals are too many</p>
-</div> -->
 
 <!-- nesting the child component -->
-<app-goal></app-goal>
+<!-- <div class="container-fluid"> -->
+  <div class="cont">
+    <app-goal></app-goal>
+  </div>
+<!-- </div> -->
+
+
