--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 /* bootstrap css */
-@import "~bootstrap/dist/css/bootstrap.css"
+@import "~bootstrap/dist/css/bootstrap.css";
 
-/* h1{
-    color: blueviolet;
-    text-transform: uppercase;
-    text-align: center;
-    text-decoration-line: underline;
-} */
+.cont{
+    padding: 3rem;
+    background-color: rgb(128, 125, 131);
+}
+
+.ff{
+    background-color: cadetblue;
+}
